--- a/SurfNPaddleBlog/Views/BlogPosts/Create.cshtml
+++ b/SurfNPaddleBlog/Views/BlogPosts/Create.cshtml
@@ -1,17 +1,12 @@
 ﻿@model SurfNPaddleBlog.Models.BlogPost
 
 @{
-    Layout = null;
+   ViewBag.Title = "Create";
 }
 
-<!DOCTYPE html>
+<h2>Create</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
+
     @using (Html.BeginForm()) 
     {
         @Html.AntiForgeryToken()
@@ -63,5 +58,4 @@
     <div>
         @Html.ActionLink("Back to List", "Index")
     </div>
-</body>
-</html>
+
