--- a/SurfNPaddleBlog/Views/Shared/_Layout.cshtml
+++ b/SurfNPaddleBlog/Views/Shared/_Layout.cshtml
@@ -20,9 +20,10 @@
 <body>
 <div class="jumbotron">
     <div class="container">
-        <h1>SURF & PADDLE CO.</h1>
-        <p>An Ironyard Academy Project Est Fall 2013</p>
-
+        <div class ="headertext">
+            <h1>SURF & PADDLE CO.</h1>
+            <p>An Ironyard Academy Project Est Fall 2013</p>
+        </div>
     </div>
 </div>
 
