a couple more text

--- a/SurfNPaddleBlog/Views/BlogPosts/Index.cshtml
+++ b/SurfNPaddleBlog/Views/BlogPosts/Index.cshtml
@@ -34,4 +34,15 @@
             <p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam accusamus odio, id earum aspernatur.Neque atque, perferendis, recusandae officia ad minima sit suscipit praesentium explicabo nisi, alias minus? Numquam, quidem! </p>
         </div>
     </div>
-
+    <div class="row">
+        @*<div class="col-md-6 col-md-offset-1 top">
+                @*<p class="main">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. In nemo, dolore magni fuga possimus beatae, delectus sunt dolorum accusantium facilis eius sit atque perspiciatis, consequatur porro reiciendis quidem. Sequi, quibusdam!</p>
+                <p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis nihil consequuntur ad ex, inventore ipsa praesentium consectetur esse sequi repellat, repellendus. Facere iure consequatur provident autem illum. Sit, sequi est</p>
+                <p class="main">read comment| read later | share this post</p>
+            </div>*@
+        <div class="col-md-5">
+            @*<h3 class="main">SIDEBAR SECTION HEADING</h3>
+                <p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam accusamus odio, id earum aspernatur.Neque atque, perferendis, recusandae officia ad minima sit suscipit praesentium explicabo nisi, alias minus? Numquam, quidem! </p>*@
+        </div>
+    </div>
+</div>
