--- a/SurfNPaddleBlog/Views/BlogPosts/Index.cshtml
+++ b/SurfNPaddleBlog/Views/BlogPosts/Index.cshtml
@@ -46,3 +46,31 @@
         </div>
     </div>
 </div>
+<hr class="featurette-divider">
+<div class="row-fluid">
+    <div class="col-md-12">
+        <h1>MOST POPULAR POSTS</h1>
+    </div>
+</div>
+<div class="row-fluid">
+    @foreach (var b in Model.Skip(1).Take(4))
+    {
+        <div class="col-sm-3">
+            <div class="bottombody">
+                <p style="color: blue">
+                    <b>@b.Title</b>
+                </p>
+
+
+                <p>@b.Body</p>
+                <p>@b.Author &nbsp; @b.DateCreated.ToShortDateString()</p>
+
+            </div>
+
+            <p>@Html.ActionLink("Details", "Details", new { id = b.Id })</p>
+        </div>
+    }
+</div>
+<p>
+
+</p>
