--- a/SurfNPaddleBlog/Content/Site.css
+++ b/SurfNPaddleBlog/Content/Site.css
@@ -45,6 +45,13 @@ footer{
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
+.headertext {
+    text-align: center;
+    position: absolute;
+    top:200px;
+    padding-left: 300px;
+    color: #ffffff;
+}
 
 .imgoverlay {
 
