bodybackground for recent post

--- a/SurfNPaddleBlog/Content/Site.css
+++ b/SurfNPaddleBlog/Content/Site.css
@@ -53,6 +53,9 @@ footer{
     color: #ffffff;
 }
 
+.bottombody {
+    background-image: url('https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcR6FyFZb9FP8WucAGwtOBuVah5NcHmHL38w2gASuuJeYt4Xq1KC0Q');
+}
 .imgoverlay {
 
     text-align: center;
